# home-tree-sitter

./: README.md
crates/tree-sitter-clojure/: CMakeLists.txt  Makefile  Package.swift  go.mod  pyproject.toml  setup.py  tree-sitter.json
crates/tree-sitter-clojure/bindings/go/: binding_test.go
crates/tree-sitter-clojure/bindings/node/: index.js
crates/tree-sitter-clojure/bindings/python/tests/: test_binding.py
crates/tree-sitter-clojure/bindings/python/tree_sitter_clojure/: __init__.py
crates/tree-sitter-clojure/bindings/rust/: build.rs  lib.rs
crates/tree-sitter-clojure/src/: parser.c
crates/tree-sitter-collection/: CHANGELOG.md  Justfile  README.md
crates/tree-sitter-collection/src/: lib.rs
crates/tree-sitter-diff/: .gitattributes  CMakeLists.txt  Makefile  Package.swift  go.mod  pyproject.toml  setup.py  tree-sitter.json
crates/tree-sitter-jinja2/: Makefile  go.mod  pyproject.toml
crates/tree-sitter-jinja2/bindings/go/: binding_test.go
crates/tree-sitter-jinja2/bindings/python/tests/: test_binding.py
crates/tree-sitter-jinja2/bindings/python/tree_sitter_jinja2/: __init__.py
crates/tree-sitter-jinja2/bindings/rust/: lib.rs
crates/tree-sitter-latex/: .gitattributes  CMakeLists.txt  Makefile  Package.swift  binding.gyp  go.mod  package.json  pyproject.toml  setup.py  tree-sitter.json
crates/tree-sitter-nix/: flake.nix
crates/tree-sitter-scss/: CMakeLists.txt  Makefile  binding.gyp  go.mod  package.json  pnpm-lock.yaml  pyproject.toml  tree-sitter.json
crates/tree-sitter-toml/: package-lock.json  package.json
crates/tree-sitter-x86asm/: Makefile  Package.swift  binding.gyp  package.json  pyproject.toml  setup.py
(+61 files in other folders)
