[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-jinja2"
description = "Tree-sitter grammar for Jinja2 templates"
version = "0.0.9"
keywords = ["incremental", "parsing", "tree-sitter", "jinja2"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Stephan Seitz" }]
requires-python = ">=3.10"
license.text = "GPL-3.0-or-later"
readme = "README.md"

[project.urls]
Homepage = "git://github.com/thehamsta/tree-sitter-jinja2.git"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
